# ESP_HTTP_Client_Request

./: .gitignore  CMakeLists.txt  README.md
components/http/: CMakeLists.txt  http.c  http.h
components/parse/: CMakeLists.txt  parse.c  parse.h
components/shearch_component/: shearch_component.h
components/uart/: CMakeLists.txt  uart.c  uart.h
main/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_http.c  test_http.h  test_parse.c  test_parse.h  test_uart.c  test_uart.h
